tests/negative/typecheck/try-out-fn.orng
const y: Char!Int = .ok(0)
const x = try y